--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.4",
     "react": "^18.3.1",
     "react-animations": "^1.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-use-gesture": "^9.1.3",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
