--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.4",
+    "framer-motion": "^11.5.4",
+    "lodash.throttle": "^4.1.1",
     "react": "^18.3.1",
     "react-animations": "^1.0.0",
     "react-dom": "^18.3.1",
